# gdrust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
docs/: faq.md  why_gdrust.md
examples/comprehensive_example/: HelloWorld.tscn  project.godot  rust_lib.tres
examples/comprehensive_example/rust/: Cargo.toml
examples/comprehensive_example/rust/src/: lib.rs
gdnative_helper/: Cargo.toml
gdnative_helper/src/: lib.rs
gdnative_helper/src/unsafe_functions/: mod.rs  node_ext.rs
gdnative_helper_macros/: Cargo.toml
gdnative_helper_macros/src/: lib.rs
gdnative_helper_macros/src/compiler/: hints.rs  impl_block.rs  mod.rs  signal_arg.rs
gdnative_helper_macros/src/parser/: gdscript_class.rs  gdscript_items.rs  gdscript_signal.rs  gdscript_var.rs  mod.rs
gdnative_helper_macros/tests/: tests.rs
gdrust/: Cargo.toml
gdrust/src/: lib.rs
gdrust/src/unsafe_functions/: mod.rs  node2_ext.rs  node_ext.rs  object_ext.rs  option_ext.rs  packed_scene_ext.rs  resource_loader_ext.rs  result_ext.rs  spatial_ext.rs  vector2_ext.rs  vector3_ext.rs
gdrust_macros/: Cargo.toml
gdrust_macros/src/: lib.rs
gdrust_macros/src/compiler/: hints.rs  impl_block.rs  mod.rs  properties.rs  setgets.rs  signal_arg.rs  signal_args.rs  signals.rs
gdrust_macros/src/parser/: gdscript_class.rs  gdscript_items.rs  gdscript_signal.rs  gdscript_var.rs  mod.rs
