[package]
name = "gdnative_helper"
version = "0.1.0"
authors = ["gdrust developers"]
edition = "2018"
license = "MIT"
readme = "../README.md"
description = "A simple tool to make interacting with gdnative-rust a little easier."
homepage = "https://github.com/wyattjsmith1/gdrust"
repository = "https://github.com/wyattjsmith1/gdrust"
keywords = [
    "godot",
    "gdnative",
]
categories = [
    "game-development",
]

[dependencies]
gdnative = "0.9"
gdnative_helper_macros = { path = "../gdnative_helper_macros" }
euclid = "0.22"
num-traits = "0.2"